Revision history for cPanel-TaskQueue

{{$NEXT}}
0.700    2014-10-15 16:37:12 America/Chicago
     - Add ability to flush all scheduled tasks to the waiting queue, whether
       or not they have reached their scheduled time.
     - Add the ability to delete all scheduled tasks.
     - Add the ability to delete all unprocessed tasks.
     - Corrected handling of optional --serial parameter in taskqueuectl.
     - Added flush_scheduled_tasks to Ctrl logic to support the new
       functionality.
     - Added delete_unprocessed_tasks to Ctrl logic to support the new
       functionality.
0.606     2014-02-20 12:56:10 America/Chicago
       Only update state file if not already up to date.
0.605     2013-04-12 11:09:30 America/Chicago
       Remove concurrency problem that could result in lost tasks. Weaken
       reference to data object that causes a memory leak.
0.604     2012-11-29 12:41:58 America/Chicago
       Correct scheduler code to use the new reconstitute method to restore
       task objects loaded from disk.
0.603     2012-11-26 10:47:36 America/Chicago
       Add flag to prevent YAML::Syck from reblessing objects from disk. This
       turns out to be a security problem. Add c::TQ::Task::reconstitute class
       method to recreate Task objects that have been serialized.
0.602     2012-10-26 16:06:06 America/Chicago
       Correct importing of cPanel::TaskQueue::Scheduler in the module
       cPanel::TaskQueue::ChildProcessor. Failed if configuration had been set
       to non-defaults elsewhere in the code.
0.601     2011-09-15 16:19:13 America/Chicago
       Better handling of conversion of state files in taskqueuectrl.
       Add 'info' command that displays serialization information.
       Corrected error is pause/resume handling.
       Added a 'process' command to force the TaskQueue to execute a task.
0.600     2011-09-14 12:40:57 America/Chicago
       Add support for serializing the queue and scheduler data in Storable